# Tahook

./: .gitignore  PrzypadkiTEstoweXD  pom.xml  readme.md  run.sh
Client/: dependency-reduced-pom.xml  pom.xml
Client/src/main/java/: module-info.java
Client/src/main/java/com/tahook/: Client.java  ErrorScene.java  Main.java  PodiumScene.java  Question.java  QuestionScene.java  RankingScene.java  StartScene.java  SuperMain.java  TestClient.java
Client/src/main/java/com/tahook/host/: CreateGameScene.java  QuestionScene.java  WaitingRoom.java
Client/src/main/java/com/tahook/player/: NickScene.java  PinScene.java  QuestionScene.java  WaitingForHostScene.java  WaitingScene.java
Client/src/main/resources/com/tahook/: errorScene.fxml  podiumScene.fxml  questionScene.fxml  rankingScene.fxml
Client/src/main/resources/com/tahook/host/: createGameScene.fxml  questionScene.fxml  waitingRoom.fxml
Client/src/main/resources/com/tahook/player/: nickScene.fxml  pinScene.fxml  (+2 more)
Client/src/main/resources/css/: style.css
Server/: CMakeLists.txt  client.cpp  client.h  handler.cpp  host.cpp  host.h  server.cpp
src/main/java/: module-info.java
src/main/java/com/tahook/: Main.java  PodiumScene.java  Question.java  RankingScene.java
src/main/java/com/tahook/host/: CreateGameScene.java
src/main/java/com/tahook/player/: NickScene.java  WaitingScene.java
src/main/resources/com/tahook/: podiumScene.fxml  rankingScene.fxml
src/main/resources/com/tahook/host/: createGameScene.fxml
src/main/resources/com/tahook/player/: questionScene.fxml
src/main/resources/css/: style.css
